--- a/Bio-OS/res/layout/activity_main.xml
+++ b/Bio-OS/res/layout/activity_main.xml
@@ -12,5 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+    
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ToggleButton"
+        android:id="@+id/button" />
 
 </RelativeLayout>
