--- a/Bio-OS/res/layout/activity_main.xml
+++ b/Bio-OS/res/layout/activity_main.xml
@@ -1,22 +1,41 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
+    <!-- Heart Rate -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:orientation="horizontal">
+        
+        <TextView
+            android:id="@+id/HeartRateLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="4dip"
+            android:text="@string/HeartRateLabel" />
     
-    <ToggleButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ToggleButton"
-        android:id="@+id/button" />
-
-</RelativeLayout>
+        <TextView
+            android:id="@+id/HeartRateValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="4dip"
+            android:paddingRight="1dip"
+            android:text="@string/DefaultValue" />
+        
+        <TextView
+            android:id="@+id/HeartRateUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="0dip"
+            android:paddingRight="4dip"
+            android:text="@string/HeartRateUnit" />
+    </LinearLayout>
+</LinearLayout>
+    
