--- a/Bio-OS/res/layout/activity_main.xml
+++ b/Bio-OS/res/layout/activity_main.xml
@@ -37,5 +37,65 @@
             android:paddingRight="4dip"
             android:text="@string/HeartRateUnit" />
     </LinearLayout>
+    
+    <!-- Temperature Reading -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        
+        <TextView
+            android:id="@+id/TemperatureLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="4dip"
+            android:text="@string/TemperatureLabel" />
+    
+        <TextView
+            android:id="@+id/TemperatureValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="4dip"
+            android:paddingRight="1dip"
+            android:text="@string/DefaultValue" />
+        
+        <TextView
+            android:id="@+id/TemperatureUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="0dip"
+            android:paddingRight="4dip"
+            android:text="@string/TemperatureUnit" />
+    </LinearLayout>
+    
+    <!-- Breathing Rate -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        
+        <TextView
+            android:id="@+id/BreathingRateLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="4dip"
+            android:text="@string/BreathingRateLabel" />
+    
+        <TextView
+            android:id="@+id/BreathingRateValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="4dip"
+            android:paddingRight="1dip"
+            android:text="@string/DefaultValue" />
+        
+        <TextView
+            android:id="@+id/BreathingRateUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="0dip"
+            android:paddingRight="4dip"
+            android:text="@string/BreathingRateUnit" />
+    </LinearLayout>
 </LinearLayout>
     
