--- a/Bio-OS/res/layout/activity_main.xml
+++ b/Bio-OS/res/layout/activity_main.xml
@@ -97,5 +97,35 @@
             android:paddingRight="4dip"
             android:text="@string/BreathingRateUnit" />
     </LinearLayout>
+    
+    <!-- LatLong -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        
+        <TextView
+            android:id="@+id/LatLongLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="4dip"
+            android:text="@string/LatLongLabel" />
+    
+        <TextView
+            android:id="@+id/LatLongValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="4dip"
+            android:paddingRight="1dip"
+            android:text="@string/DefaultValue" />
+        
+        <TextView
+            android:id="@+id/LatLongUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="0dip"
+            android:paddingRight="4dip"
+            android:text="@string/LatLongUnit" />
+    </LinearLayout>
 </LinearLayout>
     
